Fixed password field visibility

--- a/src/popup/components/Send/components/EnterPassword/style.scss
+++ b/src/popup/components/Send/components/EnterPassword/style.scss
@@ -153,7 +153,6 @@
 			font-size: 12px;
 			line-height: 18px;
 			color: $seedsHeader;
-			margin-bottom: 28px;
 		}
 
 	}
@@ -164,8 +163,6 @@
 		font-size: 12px;
 		line-height: 16px;
 		letter-spacing: 0.4px;
-		margin-top: -26px;
-		margin-bottom: 10px;
 		color: darkred;
 	}
 
